--- a/hero.css
+++ b/hero.css
@@ -73,6 +73,7 @@
     }
     .container1 .info h1{
         text-align: center;
+        font-size: 4rem;
     }
     .container1 .info h2{
         text-align: center;
