--- a/section1.css
+++ b/section1.css
@@ -40,6 +40,7 @@
     text-align: justify;
     font-size:1rem;
     margin-left: 50%;
+    margin-right: 6px;
     padding-left: 0.5rem;
     border-bottom: 3px solid #f2003c;
 }
@@ -58,7 +59,7 @@
 
 @media only screen and (max-width:700px){
     html{
-        font-size: 17px;
+        font-size: 12px;
     }
     .image2{
         padding: 10px;
